--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
 font-family: Arial, Helvetica, sans-serif;
 font-weight: 300;
 margin: 0;
+background-color: #FCF2D7;
 }	
 .main {
 display: block;
